// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteUserPage when the user is an admin should match the snapshot when the user is an admin 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb has-arrow-separator mb-4"
    >
      <ul>
        <li>
          <a
            href="/"
          >
            <span
              class="icon is-small"
            >
              <i
                class="fas fa-home"
              />
            </span>
            <span>
              Home
            </span>
          </a>
        </li>
        <li>
          <a
            href="/users"
          >
            Users
          </a>
        </li>
        <li
          class="is-active"
        >
          <a
            aria-current="page"
            href="/users/2/delete"
          >
            Delete user
          </a>
        </li>
      </ul>
    </nav>
    <h3
      class="title"
    >
      Delete admin user 'user'?
    </h3>
    <div
      class="buttons"
    >
      <button
        class="button is-danger"
        data-testid="yes"
      >
        YES
      </button>
      <button
        class="button"
        data-testid="no"
      >
        NO
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeleteUserPage when the user is not an admin should match the snapshot when the user is not an admin 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb has-arrow-separator mb-4"
    >
      <ul>
        <li>
          <a
            href="/"
          >
            <span
              class="icon is-small"
            >
              <i
                class="fas fa-home"
              />
            </span>
            <span>
              Home
            </span>
          </a>
        </li>
        <li>
          <a
            href="/users"
          >
            Users
          </a>
        </li>
        <li
          class="is-active"
        >
          <a
            aria-current="page"
            href="/users/2/delete"
          >
            Delete user
          </a>
        </li>
      </ul>
    </nav>
    <h3
      class="title"
    >
      Delete user user?
    </h3>
    <div
      class="buttons"
    >
      <button
        class="button is-danger"
        data-testid="yes"
      >
        YES
      </button>
      <button
        class="button"
        data-testid="no"
      >
        NO
      </button>
    </div>
  </div>
</DocumentFragment>
`;
